fix scrollbar and svg issue

--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -29,6 +29,7 @@
 .footer-middle {
     background-color: #1b1b1b;
     padding: 50px 0;
+    overflow: hidden;
 
     .svg-wrap {
         margin: 0 -20px;
